--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     },
     "dependencies": {
         "bootstrap": "4.3.1",
-        "jquery": "3.4.1"
+        "jquery": "3.4.1",
+        "swup": "^2.0.9"
     },
     "devDependencies": {
         "browser-sync": "2.26.7",
