--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "bootstrap": "4.3.1",
         "jquery": "3.4.1",
+        "medium-zoom": "^1.0.5",
         "swup": "^2.0.9"
     },
     "devDependencies": {
